Code adjustment based on Arved's Review

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -23,9 +23,9 @@
             <p:panel styleClass="content-header">
                 <h3>#{msgs.prozessverwaltung}</h3>
                 <h:form>
-                    <p:menuButton value="#{msgs.Create}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
-                        <p:menuitem value="#{msgs.neuenProzess}" outcome="/pages/ProzessverwaltungBearbeiten" icon="ui-icon-plusthick" />
-                        <p:menuitem value="#{msgs.neuenBatch}" icon="ui-icon-plusthick" />
+                    <p:menuButton value="#{msgs.neu}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+                        <p:menuitem value="#{msgs.neuerProzess}" outcome="/pages/ProzessverwaltungBearbeiten" icon="ui-icon-plusthick" />
+                        <p:menuitem value="#{msgs.neuerBatch}" icon="ui-icon-plusthick" />
                     </p:menuButton>
                 </h:form>
                 <!-- filters -->
