Name of messages properties modified to Englisch

--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -24,15 +24,15 @@
                 <h:form>
                     <p:menuButton value="#{msgs.neu}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
                         <p:menuitem value="#{msgs.newProject}" action="#{ProjekteForm.newProject}" icon="ui-icon-plusthick" />
-                        <p:menuitem value="#{msgs.neueProzessvorlage}" action="#{ProzessverwaltungForm.newTemplate}"
+                        <p:menuitem value="#{msgs.newProcessTemplate}" action="#{ProzessverwaltungForm.newTemplate}"
                                     immediate="true" style="width: inherit;"
                                     rendered="#{(LoginForm.maximaleBerechtigung == 1 || LoginForm.maximaleBerechtigung == 2)}"
                                     icon="ui-icon-plusthick"/>
-                        <p:menuitem value="#{msgs.neuerLaufzettel}" action="#{DocketForm.newDocket}"
+                        <p:menuitem value="#{msgs.newDocket}" action="#{DocketForm.newDocket}"
                                     immediate="true"
                                     rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
                                     icon="ui-icon-plusthick"/>
-                        <p:menuitem value="#{msgs.neuerRegelsatz}" action="#{RulesetForm.createNewRuleset}"
+                        <p:menuitem value="#{msgs.newRuleSet}" action="#{RulesetForm.createNewRuleset}"
                                     rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
                                     icon="ui-icon-plusthick"/>
                     </p:menuButton>
