--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -24,8 +24,8 @@
                 <h3>#{msgs.prozessverwaltung}</h3>
                 <h:form>
                     <p:menuButton value="#{msgs.neu}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
-                        <p:menuitem value="#{msgs.neuerProzess}" outcome="/pages/ProzessverwaltungBearbeiten" icon="ui-icon-plusthick" />
-                        <p:menuitem value="#{msgs.neuerBatch}" icon="ui-icon-plusthick" />
+                        <p:menuitem value="#{msgs.newProcess}" outcome="/pages/ProzessverwaltungBearbeiten" icon="ui-icon-plusthick" />
+                        <p:menuitem value="#{msgs.newBatch}" icon="ui-icon-plusthick" />
                     </p:menuButton>
                 </h:form>
                 <!-- filters -->
