Disable usage of Page2

--- a/Kitodo/src/main/webapp/pages/NewProcess/Page1.xhtml
+++ b/Kitodo/src/main/webapp/pages/NewProcess/Page1.xhtml
@@ -131,12 +131,11 @@
                                                     </h:commandButton>
                                                 </td>
                                                 <td class="eingabeBoxen_row3" align="right">
-                                                    <h:commandButton value="#{msgs.weiter}"
+                                                    <!--<h:commandButton value="#{msgs.weiter}"
                                                                      rendered="#{ProzesskopieForm.prozessKopie.propertiesSize>0}"
                                                                      action="#{ProzesskopieForm.goToPageTwo}">
-                                                    </h:commandButton>
+                                                    </h:commandButton>-->
                                                     <h:commandButton value="#{msgs.speichern}"
-                                                                     rendered="#{ProzesskopieForm.prozessKopie.propertiesSize==0}"
                                                                      action="#{ProzesskopieForm.createNewProcess}">
                                                     </h:commandButton>
                                                     <h:commandButton value="#{msgs.weiter}"
