--- a/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
+++ b/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
@@ -19,64 +19,22 @@
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
         <p:panel id="listWrapper">
-            <h:form id="userconfigform" onkeypress="ifEnterClick(event, 'userconfigform:absenden');">
 
-                <p:panel styleClass="content-header">
-                    <h3>#{msgs.benutzerkonfiguration}</h3>
+            <p:panel styleClass="content-header">
+                <h3>#{msgs.benutzerkonfiguration}</h3>
+            </p:panel>
 
-                    <p:commandButton id="submit"
-                                     value="#{msgs.speichern}"
-                                     action="#{LoginForm.BenutzerkonfigurationSpeichern}"
-                                     update="sticky-notifications"
-                                     icon="fa fa-floppy-o fa-lg"
-                                     iconPos="right"
-                                     validateClient="true"
-                                     styleClass="button-filled-blue">
-                        <f:ajax execute="@form" render="@form"/>
-                    </p:commandButton>
-                </p:panel>
+            <p:messages id="configuration-messages" autoUpdate="true" />
 
-                <p:messages id="configuration-messages" autoUpdate="true" />
+            <p:tabView>
+                <p:tab title="#{msgs.settings}">
+                    <ui:include src="/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml"/>
+                </p:tab>
+                <p:tab title="#{msgs.passwortAendern}">
+                    <ui:include src="/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml"/>
+                </p:tab>
+            </p:tabView>
 
-                <p:panelGrid id="userConfigurationGrid" columns="2">
-
-                    <!-- session timeout -->
-                    <h:outputLabel for="session-timeout" value="#{msgs.timeoutForSession}"/>
-                    <p:inputText id="session-timeout" value="#{LoginForm.myBenutzer.sessionTimeoutInMinutes}"
-                                 label="'#{msgs.timeoutForSession}'">
-                        <f:convertNumber integerOnly="true"/>
-                    </p:inputText>
-
-                    <!-- table size -->
-                    <h:outputLabel for="table-size" value="#{msgs.tableSize}" />
-                    <p:inputText id="table-size" value="#{LoginForm.myBenutzer.tableSize}" label="'#{msgs.tableSize}'">
-                        <f:convertNumber integerOnly="true"/>
-                    </p:inputText>
-
-                    <!-- metadata language -->
-                    <h:outputLabel for="metadata-language" value="#{msgs.spracheFuerMetadaten}" />
-                    <p:inputText id="metadata-language" value="#{LoginForm.myBenutzer.metadataLanguage}"/>
-
-                    <!-- color scheme -->
-                    <h:outputLabel for="color-scheme" value="#{msgs.colorScheme}" />
-                    <p:selectOneMenu id="color-scheme" value="#{LoginForm.myBenutzer.css}" style="margin-bottom: 0">
-                        <f:selectItems id="id19" value="#{HelperForm.cssFiles}"/>
-                    </p:selectOneMenu>
-
-                    <!-- language -->
-                    <h:outputLabel for="languages" value="#{msgs.languageUserInterface}" />
-                    <p:selectOneMenu id="languages" value="#{SpracheForm.locale}" style="margin-bottom: 0">
-                        <f:selectItems value="#{SpracheForm.supportedLocales}" var="entry"
-                                       itemLabel="#{entry['displayLanguageSelf']}"
-                                       itemValue="#{entry['id']}"/>
-                    </p:selectOneMenu>
-
-                    <!-- show process data in my tasks -->
-                    <h:outputLabel for="show-process-data" value="#{msgs.spalteVorgangsdatumInEigenenAufgabenAnzeigen}" />
-                    <p:selectBooleanCheckbox id="show-process-data" value="#{LoginForm.myBenutzer.configProductionDateShow}"/>
-
-                </p:panelGrid>
-            </h:form>
         </p:panel>
     </ui:define>
     <ui:define name="breadcrumbs">
