Modification of "neu" key to "newElement"

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -23,7 +23,7 @@
             <p:panel styleClass="content-header">
                 <h3>#{msgs.prozessverwaltung}</h3>
                 <h:form>
-                    <p:menuButton value="#{msgs.neu}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+                    <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
                         <p:menuitem value="#{msgs.newProcess}" outcome="/pages/ProzessverwaltungBearbeiten" icon="ui-icon-plusthick" />
                         <p:menuitem value="#{msgs.newBatch}" icon="ui-icon-plusthick" />
                     </p:menuButton>
