--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -22,7 +22,7 @@
             <p:panel styleClass="content-header">
                 <h3>#{msgs.projekte}</h3>
                 <h:form>
-                    <p:menuButton value="#{msgs.neu}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+                    <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
                         <p:menuitem value="#{msgs.newProject}" action="#{ProjekteForm.newProject}" icon="ui-icon-plusthick" />
                         <p:menuitem value="#{msgs.newProcessTemplate}" action="#{ProzessverwaltungForm.newTemplate}"
                                     immediate="true" style="width: inherit;"
