--- a/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Action.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Action.xhtml
@@ -80,7 +80,7 @@
                                         </h:selectOneMenu>
                                         <h:outputText value="#{msgs.bemerkung}"/>
                                         <h:inputTextarea style="width:350px;height:80px"
-                                                         value="#{AktuelleSchritteForm.batchHelper.problemMessage}"/>
+                                                         value="#{AktuelleSchritteForm.batchHelper.problem.message}"/>
                                         <h:outputText value=""/>
                                         <h:panelGroup>
                                             <h:commandLink id="action130"
@@ -123,7 +123,7 @@
                                         </h:selectOneMenu>
                                         <h:outputText value="#{msgs.bemerkung}"/>
                                         <h:inputTextarea style="width:350px;height:80px" id="input1"
-                                                         value="#{AktuelleSchritteForm.batchHelper.solutionMessage}"/>
+                                                         value="#{AktuelleSchritteForm.batchHelper.solution.message}"/>
                                         <h:outputText value=""/>
                                         <h:panelGroup>
                                             <h:commandLink id="action140"
