--- a/Kitodo/src/main/webapp/pages/userInstructions.xhtml
+++ b/Kitodo/src/main/webapp/pages/userInstructions.xhtml
@@ -12,7 +12,6 @@
 -->
 
 <ui:composition
-        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui"
@@ -29,5 +28,9 @@
                               value="#{msgs.bedienungshinweiseText}" escape="false"/>
             </p:panel>
         </p:panel>
+    </ui:define>
+    <ui:define name="breadcrumbs">
+        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+        <li><a href="">#{msgs.bedienungshinweise}</a></li>
     </ui:define>
 </ui:composition>
