--- a/Kitodo/src/main/webapp/index.xhtml
+++ b/Kitodo/src/main/webapp/index.xhtml
@@ -27,7 +27,7 @@
     >
 
     <h:head>
-        <meta http-equiv="refresh" content="0; URL=pages/Main.jsf"/>
+        <meta http-equiv="refresh" content="0; URL=pages/start.jsf"/>
         <title>Kitodo</title>
     </h:head>
     <h:body>
