Replacing the original values by the modified values of fields

--- a/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
@@ -18,7 +18,7 @@
         xmlns:p="http://primefaces.org/ui">
     <h:outputScript name="js/clipboard.js" target="body" />
     <p:selectBooleanButton
-            onLabel="Locked" offLabel="Unlocked"
+            onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
             onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg"
             style="left:90%" value="#{ProjekteForm.locked}">
         <p:ajax event="change" update="technischeDatenForm" />
@@ -29,25 +29,34 @@
                 <p:outputLabel for="internalFormat" value="#{msgs.internesSpeicherformat}" />
                 <p:selectOneMenu id="internalFormat" value="#{ProjekteForm.myProjekt.fileFormatInternal}" disabled="#{ProjekteForm.locked}">
                     <f:selectItems value="#{HelperForm.fileFormatsInternalOnly}" />
+                    <p:ajax event="change"/>
                 </p:selectOneMenu>
             </div>
             <div>
                 <p:outputLabel for="dmsExportImageDir" value="#{msgs.dmsImportImagesPfad}" />
-                <p:inputText id="dmsExportImageDir" placeholder="#{msgs.dmsImportImagesPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportImagesPath}" disabled="#{ProjekteForm.locked}"/>
+                <p:inputText id="dmsExportImageDir" placeholder="#{msgs.dmsImportImagesPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportImagesPath}" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('projectEditForm:tabs:dmsExportImageDir');" disabled="#{ProjekteForm.locked}"/>
             </div>
             <div>
                 <p:outputLabel for="dmsExportErrorDir" value="#{msgs.dmsImportErrorPfad}" />
-                <p:inputText id="dmsExportErrorDir" placeholder="#{msgs.dmsImportErrorPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportErrorPath}" disabled="#{ProjekteForm.locked}"/>
+                <p:inputText id="dmsExportErrorDir" placeholder="#{msgs.dmsImportErrorPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportErrorPath}" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('projectEditForm:tabs:dmsExportErrorDir')" disabled="#{ProjekteForm.locked}"/>
             </div>
             <div>
                 <p:outputLabel for="automaticExport" value="#{msgs.automatischerDmsImport}" />
-                <p:selectBooleanCheckbox id="automaticExport" value="#{ProjekteForm.myProjekt.useDmsImport}" class="input" disabled="#{ProjekteForm.locked}"/>
+                <p:selectBooleanCheckbox id="automaticExport" value="#{ProjekteForm.myProjekt.useDmsImport}" class="input" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="timeout" value="#{msgs.timeout}" />
-                <p:inputText id="timeout" placeholder="#{msgs.timeout}" class="input" value="#{ProjekteForm.myProjekt.dmsImportTimeOut}" disabled="#{ProjekteForm.locked}"/>
+                <p:inputText id="timeout" placeholder="#{msgs.timeout}" class="input" value="#{ProjekteForm.myProjekt.dmsImportTimeOut}" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:inputText>
             </div>
         </p:row>
         <p:row>
@@ -55,21 +64,28 @@
                 <p:outputLabel for="DmsFormat" value="#{msgs.dmsExportformat}" />
                 <p:selectOneMenu id="DmsFormat" value="#{ProjekteForm.myProjekt.fileFormatDmsExport}" disabled="#{ProjekteForm.locked}">
                     <f:selectItems value="#{HelperForm.fileFormats}" />
+                    <p:ajax event="change"/>
                 </p:selectOneMenu>
             </div>
             <div>
                 <p:outputLabel for="dmsExportDir" value="#{msgs.dmsImportPfadXmlDatei}" />
-                <p:inputText id="dmsExportDir" placeholder="#{msgs.dmsImportPfadXmlDatei}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportRootPath}" disabled="#{ProjekteForm.locked}"/>
+                <p:inputText id="dmsExportDir" placeholder="#{msgs.dmsImportPfadXmlDatei}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportRootPath}" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('projectEditForm:tabs:dmsExportDir');" disabled="#{ProjekteForm.locked}"/>
             </div>
             <div>
                 <p:outputLabel for="dmsExportSuccessDir" value="#{msgs.dmsImportSuccessPfad}" />
-                <p:inputText id="dmsExportSuccessDir" placeholder="#{msgs.dmsImportSuccessPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportSuccessPath}" disabled="#{ProjekteForm.locked}"/>
+                <p:inputText id="dmsExportSuccessDir" placeholder="#{msgs.dmsImportSuccessPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportSuccessPath}" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('projectEditForm:tabs:dmsExportSuccessDir');" disabled="#{ProjekteForm.locked}"/>
             </div>
             <div>
                 <p:outputLabel for="createDir" value="#{msgs.dmsImportCreateProcessFolder}" />
-                <p:selectBooleanCheckbox id="createDir" class="input" value="#{ProjekteForm.myProjekt.dmsImportCreateProcessFolder}" disabled="#{ProjekteForm.locked}"/>
+                <p:selectBooleanCheckbox id="createDir" class="input" value="#{ProjekteForm.myProjekt.dmsImportCreateProcessFolder}" disabled="#{ProjekteForm.locked}">
+                    <p:ajax event="change"/>
+                </p:selectBooleanCheckbox>
             </div>
         </p:row>
     </p:panelGrid>
